[UI] Header overflow trigger bug fix
Fixed the alignment issue when the header-overflow-trigger is directly after the .header-nav or the .branding

--- a/src/clarity-angular/nav/_header.clarity.scss
+++ b/src/clarity-angular/nav/_header.clarity.scss
@@ -363,7 +363,7 @@ $clr-header-nav-text-horizontal-padding: $clr_baselineRem_1;
                 //Pull the dropdown menus of all dropdowns up to compensate
                 //for the height of the header.
                 &.bottom-right > .dropdown-menu,
-                &.bottom-left > .dropdown-menu, {
+                &.bottom-left > .dropdown-menu {
                     top: 85%;
                 }
 
